--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,14 +1,22 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: '强国学习--day1'
+date: 2025-11-07
+permalink: /posts/2025/11/blog-post-1/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - 概率论
+  - 区间估计
+  - 强国有我
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+自从来了霞浦之后感觉每天都过的浑浑噩噩的，仿佛一个上了30年班的老登。仔细想想再这样下去就真成粪蛆了，所以我强制要求每天都要学习，写这个blog就是为了监督自己强制学习。
+
+强国学习的由来
+======
+自从来了霞浦之后感觉每天都过的浑浑噩噩的，仿佛一个上了30年班的老登。仔细想想再这样下去就真成粪蛆了，所以我强制要求每天都要学习，写这个blog就是为了监督自己强制学习。
+
+![xiaotongzhenlou](/images/blogimages/day1/tt.jpg "小橦")
+
+<center style="font-size:14px;color:#C0C0C0;text-decoration:underline">图1.小橦护我</center> 
 
 Headings are cool
 ======
