--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -14,7 +14,7 @@ tags:
 ======
 自从来了霞浦之后感觉每天都过的浑浑噩噩的，仿佛一个上了30年班的老登。仔细想想再这样下去就真成粪蛆了，所以我强制要求每天都要学习，写这个blog就是为了监督自己强制学习。
 
-![xiaotongzhenlou](/images/blogimages/day1/tt.jpg "小橦")
+![xiaotongzhenlou](https://mrwhy233.github.io/tryhard.github.io/images/tt.jpg "小橦")
 
 <center style="font-size:14px;color:#C0C0C0;text-decoration:underline">图1.小橦护我</center> 
 
