--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -18,8 +18,12 @@ tags:
 
 <center style="font-size:14px;color:#C0C0C0;text-decoration:underline">图1.小橦护我</center> 
 
-Headings are cool
+区间估计
 ======
+今天复习一下概率与统计
+
+ 区间估计估计不同于点估计，能够提供待估计参数的置信区间和置信度（即保证XX\%的可能性该参数的值位于 $*\sim*$ 之间，例如，有95\%的可能性全市房租均价在2000$\sim$2500之间），区间估计虽然不能得出精确的估计值，但是能够提供保证程度，代表了有多大把握总体参数会在相应的置信区间内。在对全体样本进行多次抽样，根据中心极限定理，多次抽样的样本均值会服从均值为总体样本均值的正态分布。
+
 
 You can have many headings
 ======
