--- a/_posts/2025-11-11-blog-post-2.md
+++ b/_posts/2025-11-11-blog-post-2.md
@@ -1,6 +1,6 @@
 ---
 title: '强国学习--day2'
-date: 2025-11-12
+date: 2025-11-11
 permalink: /posts/2025/11/blog-post-2/
 tags:
   - donut
@@ -248,4 +248,136 @@ $$
 ---
 
 ## 🔚 九、效果显示
-![](/images/donut.gif)
+![](https://mrwhy233.github.io/tryhard.github.io//images/donut.gif)
+
+---
+
+## 代码
+```html
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+  <meta charset="UTF-8" />
+  <title>旋转甜甜圈</title>
+  <style>
+    body {
+      background: black;
+      color: white;
+      font-family: monospace;
+      white-space: pre;
+      font-size: 10px;
+      line-height: 8px;
+      text-align: center;
+      overflow: hidden;
+    }
+    pre {
+      display: inline-block;
+      text-align: left;
+    }
+  </style>
+</head>
+<body>
+  <pre id="donut"></pre>
+
+  <script>
+    const pre = document.getElementById('donut');
+    const width = 80, height = 40;
+    let A = 0, B = 0, C = 0;
+
+    function renderFrame() {
+      const output = [];
+      const zbuffer = [];
+      for (let i = 0; i < width * height; i++) {
+        output[i] = ' ';
+        zbuffer[i] = 0;
+      }
+
+      const R1 = 1, R2 = 2, K2 = 6, K1 = 40;
+
+      const cosA = Math.cos(A), sinA = Math.sin(A);
+      const cosB = Math.cos(B), sinB = Math.sin(B);
+      const cosC = Math.cos(C), sinC = Math.sin(C);
+
+      const Lx = 1 / Math.sqrt(3);
+      const Ly = 1 / Math.sqrt(3);
+      const Lz = -1 / Math.sqrt(3);
+
+      for (let theta = 0; theta < 2 * Math.PI; theta += 0.07) {
+        for (let phi = 0; phi < 2 * Math.PI; phi += 0.02) {
+          const cosTheta = Math.cos(theta), sinTheta = Math.sin(theta);
+          const cosPhi = Math.cos(phi), sinPhi = Math.sin(phi);
+
+          const circleX = R2 + R1 * cosTheta;
+          const x = circleX * cosPhi;
+          const y = circleX * sinPhi;
+          const z = R1 * sinTheta;
+
+          // 绕 X
+          let y1 = y * cosA - z * sinA;
+          let z1 = y * sinA + z * cosA;
+          let x1 = x;
+
+          // 绕 Y
+          let z2 = z1 * cosC - x1 * sinC;
+          let x2 = z1 * sinC + x1 * cosC;
+          let y2 = y1;
+
+          // 绕 Z
+          let x3 = x2 * cosB - y2 * sinB;
+          let y3 = x2 * sinB + y2 * cosB;
+          let z3 = z2;
+
+          // --- 投影 ---
+          const ooz = 1 / (K2 + z3);
+          const xp = Math.floor(width / 2 + K1 * ooz * x3);
+          const yp = Math.floor(height / 2 - K1 * 0.5 * ooz * y3);
+
+          // --- 法向量旋转 (与几何相同的旋转过程) ---
+          let Nx = cosPhi * cosTheta;
+          let Ny = sinPhi * cosTheta;
+          let Nz = sinTheta;
+
+          // 同样的旋转应用到法向量
+          let Ny1 = Ny * cosA - Nz * sinA;
+          let Nz1 = Ny * sinA + Nz * cosA;
+          let Nx1 = Nx;
+
+          let Nz2 = Nz1 * cosC - Nx1 * sinC;
+          let Nx2 = Nz1 * sinC + Nx1 * cosC;
+          let Ny2 = Ny1;
+
+          let Nx3 = Nx2 * cosB - Ny2 * sinB;
+          let Ny3 = Nx2 * sinB + Ny2 * cosB;
+          let Nz3 = Nz2;
+
+          // --- 光照计算 ---
+          let L = Nx3 * Lx + Ny3 * Ly + Nz3 * Lz;
+          if (L < 0) L = 0; // 只显示正面
+          const luminance_chars = ".,-~:;=!*#$@";
+          const luminance_index = Math.floor(L * (luminance_chars.length - 1));
+
+          const idx = xp + yp * width;
+          if (yp >= 0 && yp < height && xp >= 0 && xp < width && ooz > zbuffer[idx]) {
+            zbuffer[idx] = ooz;
+            output[idx] = luminance_chars[luminance_index];
+          }
+        }
+      }
+
+      let frame = '';
+      for (let i = 0; i < output.length; i++) {
+        frame += i % width ? output[i] : '\n';
+      }
+
+      pre.textContent = frame;
+
+      A += 0.04;
+      B += 0.05;
+      C += 0.03;
+    }
+
+    setInterval(renderFrame, 22);
+  </script>
+</body>
+</html>
+```
