--- a/_posts/2025-11-07-blog-post-1.md
+++ b/_posts/2025-11-07-blog-post-1.md
@@ -16,8 +16,331 @@ tags:
 
 <center style="font-size:14px;color:#C0C0C0;text-decoration:underline">图1.小橦护我</center> 
 
-区间估计
-======
-今天复习一下概率与统计
+## 区间估计
+> 今天复习一下概率与统计
 
  区间估计估计不同于点估计，能够提供待估计参数的置信区间和置信度（即保证XX%的可能性该参数的值位于 $$\sim$$之间，例如，有95%的可能性全市房租均价在2000$$\sim$$2500之间），区间估计虽然不能得出精确的估计值，但是能够提供保证程度，代表了有多大把握总体参数会在相应的置信区间内。在对全体样本进行多次抽样，根据中心极限定理，多次抽样的样本均值会服从均值为总体样本均值的正态分布。
+
+$$
+  \begin{aligned}
+     x\sim N\left (  \mu ,\sigma^{2} \right ) 
+ \end{aligned}
+$$
+
+ 由于总体的均值$$\mu$$和总体的$$\mu$$是未知参数，因此我们使用抽样样本的均值和标准差作为总体均值和标准差的估计值。
+
+![qujianguji](https://mrwhy233.github.io/tryhard.github.io/images/day111222.jpg "qujianguji")
+
+### 数理上的定义
+
+设$$X_{1},X_{2},\dots ,X_{n}$$为来自参数分布族$$\mathcal{F}=\{f(x, \theta): \theta \in \Theta\}$$的样本，$$\theta$$为一维未知参数。如果$$\hat{\theta } _{L}\left (X\right ),\hat{\theta } _{U}\left (X\right )$$为两个统计量，且$$\hat{\theta } _{L}\left (X\right )\le \hat{\theta } _{U}\left (X\right )$$，则称随机区间$$[\hat{\theta } _{L}\left (X\right ),\hat{\theta } _{U}\left (X\right )]$$为 $$\theta$$的一个区间估计。
+
+### 置信区间
+
+设$$[\hat{\theta } _{L}\left (X\right ),\hat{\theta } _{U}\left (X\right )]$$是参数$$\theta$$的一个区间估计，如果对给定的$$\alpha\in (0,1)$$，有
+
+$$
+\begin{aligned}
+    P_{\theta }\left \{ \hat{\theta } _{L}\left (X\right )\le \theta \le \hat{\theta } _{U}\left (X\right ) \right \}\ge 1-\alpha ,\forall \theta \in\Theta 
+\end{aligned}
+$$
+
+则称$$[\hat{\theta } _{L}\left (X\right ),\hat{\theta } _{U}\left (X\right )]$$为$$\theta$$的置信水平为$$1-\alpha$$的置信区间，$$\hat{\theta } _{L}\left (X\right )$$和$$\hat{\theta } _{U}\left (X\right )$$分别叫置信水平为$$1-\alpha$$的置信区间的置信下限和置信上限。通常可取的置信水平为$$1-\alpha=$$0.95或者0.9等。
+要求：
+1. 要求$$\theta$$以很大的可能被包含在区间$$[\hat{\theta } _{L}\left (X\right ),\hat{\theta } _{U}\left (X\right )]$$内，也就是说概率$$P_{\theta}$$要尽可能的大。即要求估计尽量可靠。
+2. 估计的精度要尽可能的高。如要求区间长度$$\hat{\theta } _{L}\left (X\right )-\hat{\theta } _{U}\left (X\right )$$尽可能短，或能体现该要求的其它准则。
+3. 可靠度与精度是一对矛盾，一般是在保证可靠度的条件下，尽可能提高精度。
+
+### 如何求置信区间？
+
+求取参数的置信区间的方法有很多，但其中最常用的是枢轴量法。枢轴量法的基本思想是：在求取某参数的置信区间时，一般先给一个好的点估计，之后再通过这个点估计求感兴趣参数的置信区间。枢轴量法有四步：
+
+1. 找一个与待估参数$$g(\theta)$$无关的统计量T（一般是它的一个很好的点估计）；
+2. 设法找出关于T和$$g(\theta)$$的某函数$$S(T,g(\theta))$$，使得$$S(T,g(\theta))$$的分布$$F(x)$$与$$\theta$$无关，S就称为是枢轴量；
+3. 适当地选取两个常数c,d,使对给定的$$\alpha\in(0,1)$$，有$$P_{\theta}\left \{ { c \le S(T,g(\theta))\le d} \right \}  =1-\alpha$$；
+4. 如果能把不等式$$c\le S(T,g(\theta))\le d$$等价地改写成$$\hat{\theta } _{L}\left (X\right )\le g(\theta)\le \hat{\theta } _{U}\left (X\right )$$，其中置信上下限只与c,d,T有关，而与$$\theta$$无关，则$$[\hat{\theta } _{L}\left (X\right ),\hat{\theta } _{U}\left (X\right )]$$就是$$g(\theta)$$的置信水平为$$1-\alpha$$的置信区间。
+
+**一个正态总体的情况：**
+
+用枢轴量法求一个正态总体各参数的置信区间，假设正态总体 \\(X\sim N\left ( \mu ,\sigma ^{2} \right )\\)，
+\\( X_{1},X_{2},\dots ,X_{n}\\) 为来自总体 \\(X\\) 的一个样本，
+\\(1-\alpha\\) 为置信信度，\\(\bar{x} \\) 为样本均值，\\(S^{2}\\) 为样本方差。
+
+---
+
+### 1. 均值 \\(\mu\\) 的区间估计
+
+#### (1) \\(\sigma^{2}\\) 已知
+
+由于
+
+$$
+\bar{X}\sim N\left(\mu,\frac{\sigma^{2}}{n}\right)
+$$
+
+所以将 \\(\bar{x}\\) 标准化
+
+$$
+\frac{\bar{X}-\mu}{\frac{\sigma}{\sqrt{n}}}\sim N\left(0,1\right )
+$$
+
+因此有
+
+$$
+P\left\{  \left | \frac{\bar{X}-\mu}{\frac{\sigma}{\sqrt{n}}} \right |\le z_{\frac{\alpha}{2}} \right\}=1-\alpha
+$$
+
+其中 \\(z_{\frac{\alpha}{2}}\\) 是正态分布的上 \\(\frac{\alpha}{2}\\) 分位点。
+
+关于均值 \\(\mu\\) 的置信度为 \\(1-\alpha\\) 的置信区间为
+
+$$
+\left [ \bar{X}-\frac{\sigma }{\sqrt[]{n} }z_{\frac{\alpha }{2} },
+\bar{X}+  \frac{\sigma }{\sqrt[]{n} }z_{\frac{\alpha }{2} } \right ] 
+$$
+
+#### (2) \\(\sigma^{2}\\) 未知
+
+由于 \\(\sigma^{2}\\) 未知，所以用样本方差 \\(S^{2}\\) 代替总体方差 \\(\sigma^{2}\\) 则
+
+$$
+T=\frac{\bar{X}-\mu}{\frac{S}{\sqrt{n}}}\sim t\left(n-1\right)
+$$
+
+有
+
+$$
+P\left\{ \left | \frac{\bar{X}-\mu}{\frac{S}{\sqrt{n}}}\right |\le t_{\frac{\alpha}{2}}\left(n-1\right)  \right\}=1-\alpha
+$$
+
+其中 \\(t_{\frac{\alpha}{2}}\left(n-1\right)\\) 表示自由度为 \\(n−1\\) 的 t 分布上的 \\(\frac{\alpha}{2}\\) 分位点。
+
+得出关于均值 \\(\mu\\) 置信度为 \\(1-\alpha\\) 的双侧置信区间为
+
+$$
+\left [ \bar{X}- \frac{S}{\sqrt[]{n} }t_{\frac{\alpha }{2} }\left ( n-1 \right ) ,  
+\bar{X}+ \frac{S}{\sqrt[]{n} }t_{\frac{\alpha }{2} }\left ( n-1 \right )  \right ] 
+$$
+
+---
+
+### 2. 方差 \\(\sigma^{2}\\) 的区间估计
+
+#### (1) 均值 \\(\mu\\) 已知
+
+\\(\sigma^{2}\\) 的极大似然估计为
+
+$$
+\hat{\sigma}^{2}=\frac{1}{n}\sum_{i=1}^{n}\left (X_{i}-\mu \right )^{2}   
+$$
+
+根据此式可以导出 \\(\sigma^{2}\\) 的置信区间。
+
+\\(\chi^{2}(n)\\) 的定义：
+
+$$
+\chi^{2}(n)=\sum_{i=1}^{n}X_{i}^{2}
+$$
+
+其中，\\(X_{i}\\) 服从标准正态分布。根据 \\(\chi^{2}\\) 分布的定义，可以得到
+
+$$
+\frac{n\hat{\sigma }^{2} }{\sigma ^{2}} =\sum_{i=1}^{n}\frac{(\bar{X}-\mu )^{2}}{\sigma ^{2}}\sim \chi ^{2}(n)  
+$$
+
+所以
+
+$$
+P\left\{\chi^{2}_{1-\frac{\alpha}{2}}(n)\le\frac{n\hat{\sigma}^{2}}{\sigma^{2}}\le\chi^{2}_{\frac{\alpha}{2}}(n)\right\}=1-\alpha
+$$
+
+其中 $$\chi^{2}_{1-\frac{\alpha}{2}}(n)$$和 \\(\chi^{2}_{\frac{\alpha}{2}}(n)\\) 分别表示自由度为 \\(n\\) 的 \\(\chi^{2}\\) 分布上的 \\(1-\frac{\alpha}{2}\\) 和 \\(\frac{\alpha}{2}\\) 分位点。
+
+得到 \\(\sigma^{2}\\) 的置信度为 \\(1-\alpha\\) 的双侧置信区间为
+
+$$
+\left [ \frac{n\hat{\sigma }^{2} }{\chi ^{2}_{\frac{\alpha }{2} }(n)},
+\frac{n\hat{\sigma }^{2} }{\chi ^{2}_{1-\frac{\alpha }{2} }(n)}  \right ] 
+$$
+
+#### (2) 均值 \\(\mu\\) 未知
+
+取 \\(\sigma^{2}\\) 的估计量
+
+$$
+S^{2}=\frac{1}{n-1}\sum_{i=1}^{n}\left(X_{i}-\bar{X}\right)^{2}
+$$
+
+并且有
+
+$$
+\frac{\left(n-1\right)S^{2}}{\sigma^{2}}\sim \chi^{2}\left(n-1\right)
+$$
+
+因此有
+
+$$
+P\left \{ \chi^{2}_{1-\frac{\alpha}{2}}\left(n-1\right) \le \frac{\left( n-1\right)S^{2}}{\sigma^{2}}\le\chi^{2}_{\frac{\alpha}{2}}\left(n-1\right)\right \}=1-\alpha 
+$$
+
+其中$$\chi^{2}_{1-\frac{\alpha}{2}}\left(n-1\right)$$ 和 $$\chi^{2}_{\frac{\alpha}{2}}\left(n-1\right)$$ 分别表示自由度为 \\(n-1\\) 的 \\(\chi^{2}\\) 分布上的 \\(1-\frac{\alpha}{2}\\) 和 \\(\frac{\alpha}{2}\\) 分位点。
+
+由此得到 \\(\sigma^{2}\\) 的置信度为 \\(1-\alpha\\) 的双侧置信区间为
+
+$$
+\left[\frac{(n-1) S^{2}}{\chi_{\alpha / 2}^{2}(n-1)}, 
+\frac{(n-1) S^{2}}{\chi_{1-\alpha / 2}^{2}(n-1)}\right]
+$$
+
+---
+
+**两个正态总体的情况：**
+
+单个总体的区间估计针对总体的均值和方差，当我们有两个总体时，就要对它们的参数进行对比了，这在实际应用中很常见。
+比如，我们要考察一项新技术对提高产品质量是否有成效，
+则把新技术实施前后的产品质量指标堪称两个正态总体，
+这时我们所考察的问题，就转化为检验这两个正态总体的均值比较的问题。
+
+---
+
+### 1. 均值差 \\(\mu_{1}-\mu_{2}\\)的区间情况
+
+根据两样本总体方差是否已知、是否相等，这里要分三种情况讨论。
+
+#### (1) 当两总体的方差 $$\sigma^{2}_{1},\sigma^{2}_{2}$$ 已知
+
+由正态分布的性质有
+
+$$
+\bar{X}-\bar{Y}\sim N\left(\mu_{1}-\mu_{2},
+\frac{\sigma^{2}_{1}}{n_{1}}+\frac{\sigma^{2}_{2}}{n_{2}}\right)
+$$
+
+与单个总体均值区间估计的推导相类似，得到 \\(\mu_{1}-\mu_{2}\\) 的置信为 \\(1-\alpha\\) 的双侧置信区间为
+
+$$
+\left [ \bar{X}-\bar{Y}-z_{\frac{\alpha}{2}}\sqrt{\frac{\sigma^{2}_{1}}{n_{1}}+\frac{\sigma^{2}_{2}}{n_{2}} },
+\bar{X}-\bar{Y}+z_{\frac{\alpha}{2}}\sqrt{\frac{\sigma^{2}_{1}}{n_{1}}+\frac{\sigma^{2}_{2}}{n_{2}} }\right ] 
+$$
+
+#### (2) 当两总体的方差 $$\sigma^{2}_{1},\sigma^{2}_{2}$$ 未知但相等
+
+经计算可以得到
+
+$$
+T=\frac{\bar{X}-\bar{Y}-\left(\mu_{1}-\mu_{2}\right)}{S_{w}\sqrt{\frac{1}{n_{1}}+\frac{1}{n_{2}}}}\sim t\left(n_{1}+n_{2}-2\right)
+$$
+
+其中
+
+$$
+S_{w}=\sqrt{\frac{\left(n_{1}-1\right)S^{2}_{1}+\left(n_{2}-1\right)S^{2}_{2}}{n_{1}+n_{2}-2}}
+$$
+
+推导得到 \\(\mu_{1}-\mu_{2}\\) 的置信度为 \\(1-\alpha\\) 的置信区间为
+
+$$
+\left[\bar{X}-\bar{Y}-t_{\alpha / 2}\left(n_{1}+n_{2}-2\right) S_{w} 
+\sqrt{1 / n_{1}+1 / n_{2}}, 
+\bar{X}-\bar{Y}+t_{\alpha / 2}\left(n_{1}+n_{2}-2\right) S_{w} 
+\sqrt{1 / n_{1}+1 / n_{2}}\right]
+$$
+
+#### (3) 当两总体的方差 $$\sigma^{2}_{1},\sigma^{2}_{2}$$未知，且不相同
+
+可以得到
+
+$$
+T=\frac{\bar{X}-\bar{Y}-\left(\mu_{1}-\mu_{2}\right)}{\sqrt{\frac{\sigma^{2}_{1}}{n_{1}}+\frac{\sigma^{2}_{2}}{n_{2}} }}\sim t\left(v\right)
+$$
+
+其中
+
+$$
+v=\frac{\left(\frac{\sigma^{2}_{1}}{n_{1}}+\frac{\sigma^{2}_{2}}{n_{2}} \right)^{2}}
+{\frac{\sigma ^{4}_{1}}{n^{2}_{1}(n_{1}-1)} +\frac{\sigma ^{4}_{2}}{n^{2}_{2}(n_{2}-1)}} 
+$$
+
+但是由于 $$\sigma^{2}_{1},\sigma^{2}_{2}$$ 未知, 所以可用样本方差 $$S^{2}_{1},S^{2}_{2}$$ 来近似，因此
+
+$$
+\hat{v}=\frac{\left(\frac{S^{2}_{1}}{n_{1}}+\frac{S^{2}_{2}}{n_{2}} \right)^{2}}
+{\frac{S ^{4}_{1}}{n^{2}_{1}(n_{1}-1)} +\frac{S ^{4}_{2}}{n^{2}_{2}(n_{2}-1)}} 
+$$  
+
+所以可以近似的认为
+
+$$
+T\sim t(\hat{v})
+$$
+
+由此得到 \\(\mu_{1}-\mu_{2}\\) 的置信度为 \\(1-\alpha\\) 的置信区间为
+
+$$
+[\bar{X}-\bar{Y}-t_{\alpha/2}(\hat{v})\sqrt{\frac{S_1^2}{n_1}+\frac{S_2^2}{n_2}},
+\bar{X}-\bar{Y}+t_{\alpha/2}(\hat{v})\sqrt{\frac{S_1^2}{n_1}+\frac{S_2^2}{n_2}}]
+$$
+
+---
+
+### 2. 方差比 $$\frac{\sigma^{2}_{1}}{\sigma^{2}_{2}}$$ 的区间估计
+
+在实际分析中，比较两个总体的方差，采用的是“比”的形式，而不是差值，这与统计量的构造有关。
+
+#### (1) \\(\mu_{1}\\) 和 \\(\mu_{2}\\) 已知
+
+由于
+
+$$
+\hat{\sigma}_1^2=\frac1{n_1}\sum_{i=1}^{n_1}(X_i-\mu_1)^2,\quad
+\hat{\sigma}_2^2=\frac1{n_2}\sum_{i=1}^{n_2}(Y_i-\mu_2)^2
+$$
+
+分别为 $$\sigma^{2}_{1}$$ 和 $$\sigma^{2}_{2}$$的无偏估计，由于
+
+$$
+F=\frac{\hat{\sigma_1}^2/\sigma_1^2}{\hat{\sigma_2}^2/\sigma_2^2}\sim F(n_1,n_2)
+$$
+
+所以
+
+$$
+P\left\{F_{1-\alpha/2}(n_1,n_2)\leq\frac{\hat{\sigma_1}^2/\sigma_1^2}{\hat{\sigma_2}^2/\sigma_2^2}
+\leq F_{\alpha/2}(n_1,n_2)\right\}=1-\alpha 
+$$
+
+其中 $$F_{1-\alpha/2}(n_1,n_2)$$ 和 $$F_{\alpha/2}(n_1,n_2)$$ 分别为 $$F(n_1,n_2)$$ 分布上的 \\(1-\alpha\\) 和 \\(\frac{\alpha}{2}\\) 分位点。
+
+得到 $$\frac{\sigma^{2}_{1}}{\sigma^{2}_{2}}$$ 的置信度为 \\(1-\alpha\\) 的置信区间为
+
+$$
+[\frac{\hat{\sigma}_1^2/\hat{\sigma}_2^2}{F_{\alpha/2}(n_1,n_2)},
+\frac{\hat{\sigma}_1^2/\hat{\sigma}_2^2}{F_{1-\alpha/2}(n_1,n_2)}]
+$$
+
+#### (2) \\(\mu_1\\) 与 \\(\mu_{2}\\) 未知
+
+由于 $$S^{2}_{1}$$ 和 $$S^{2}_{2}$$分别为 \\(\sigma^2_2\\) 和 \\(\sigma^2_2\\) 的无偏估计，此时有
+
+$$
+F=\frac{S_1^2/\sigma_1^2}{S_2^2/\sigma_2^2}\sim F(n_1-1,n_2-2)
+$$
+
+因此
+
+$$
+P\left\{F_{1-\alpha/2}(n_1-1,n_2-1)
+\leq\frac{S_1^2/\sigma_1^2}{S_2^2/\sigma_2^2}
+\leq F_{\alpha/2}(n_1-1,n_2-1)\right\}=1-\alpha 
+$$
+
+则 \\(\mu_{1}\\) 和 \\(\mu_{2}\\) 的置信度为 \\(1-\alpha\\) 的置信区间为
+
+$$
+[\frac{S_1^2/S_2^2}{F_{\alpha/2}(n_1-1,n_2-1)},
+\frac{S_1^2/S_2^2}{F_{1-\alpha/2}(n_1-1,n_2-1)}]
+$$
+
+----
+
+参考资料：[北京大学古生物学定量分析实践平台-区间估计](http://geopku.com/%E5%8C%BA%E9%97%B4%E4%BC%B0%E8%AE%A1/)
